--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,15 +103,60 @@ li {
   width: 50%; 
   margin: 0 auto;
 }
+
+/* common class style */
+
+/* common class style */
 /*=================================
   Header styling starts here
 =================================*/
 
+.header-content { 
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  text-align: center ;
+}
 
+.hamburger {
+  width: 5%;
+  display: flex;
+  flex-direction: column;
+}
 
+.hamburger.hidden { display: none; }
 
+.bar {
+  width: 100%;
+  text-indent: -9999px;
+  float: left;
+  color: #000;
+  line-height: 0.8;
+}
 
+.bar::before {
+  width: 100%;
+  height: 1px;
+  content: '';
+  text-indent: 0;
+  float: left;
+  border-bottom: 3px solid black;
+}
 
+.search {
+  padding: 8px;
+  border: none;
+  border: .5px solid #285FAB;
+}
+
+.search-btn { 
+  padding: 8px 12px; 
+  border: none;
+  background: #285FAB;
+  color: #FFF;
+}
+
+.search-form { display: flex; }
 /*=================================
   Header styling ends here
 =================================*/  
