--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,18 +100,26 @@ li {
 /*for wrapper*/
 .wrapper {
   max-width: 1360px;
-  width: 50%; 
+  width: 60%; 
   margin: 0 auto;
 }
 
 /* common class style */
-
+.caps-first { text-transform: capitalize; }
+.caps-first-l::first-letter {text-transform: capitalize;}
+.color-white { color: #fff; }
 /* common class style */
 /*=================================
   Header styling starts here
 =================================*/
-
+header {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+}
 .header-content { 
+  margin: 40px 0;
   display: flex; 
   justify-content: space-between;
   align-items: center;
@@ -146,17 +154,80 @@ li {
 .search {
   padding: 8px;
   border: none;
-  border: .5px solid #285FAB;
+  border: .5px solid #3f6dad;
 }
 
 .search-btn { 
   padding: 8px 12px; 
   border: none;
-  background: #285FAB;
+  background: #3f6dad;
   color: #FFF;
 }
 
 .search-form { display: flex; }
+
+nav { background: #328de2; }
+
+.header-nav a { 
+  padding: 0px 6px; 
+  margin: 8px 0;
+  color: #FFF;
+}
+
+.header-nav a { 
+  border-right: 1px solid #90b3e4;
+}
+
+.header-nav>li:last-child a {
+  border-right:0;
+}
+
+/* banner section start */
+
+.banner {
+  width: 100%;
+  min-height: 450px;
+  position: relative;
+}
+
+.banner figure {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.banner figure img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.banner .banner-container { 
+  position: absolute; 
+  bottom: 30%; 
+  width: 35%;
+}
+
+.banner-container h2 {
+font-size: 30px;
+padding-bottom: 10px;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Quicksand', sans-serif;
+}
+
+.banner-container p {
+  font-size: 24px;
+  color: #90b3e4;
+  font-family: 'Open Sans', sans-serif;
+font-family: 'Quicksand', sans-serif;
+  word-spacing: .5px;
+  line-height: .9;
+}
+/* banner section end */
+
 /*=================================
   Header styling ends here
 =================================*/  
