--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,11 @@ li {
 .color-white { color: #fff; }
 a { color: #000; }
 
+.error { 
+  border: 1px solid red;
+  box-shadow: 1px 1px 8px 1px #e50b0b;
+}
+
 /* common class style */
 
 /*=================================
@@ -133,28 +138,31 @@ header {
 }
 
 .hamburger {
-  width: 5%;
   display: none;
   flex-direction: column;
 }
 
-.hamburger.hidden { display: none; }
+/* .hamburger.hidden { display: none; } */
 
 .bar {
-  width: 100%;
+  content: '';
+  min-width: 30px;
+  height: 1px;
+  border-bottom: 3px solid #fff;
   text-indent: -9999px;
   float: left;
-  color: #000;
-  line-height: 0.8;
+  color: #fff;
+  padding-bottom: 4px;
 }
 
-.bar::before {
-  width: 100%;
-  height: 1px;
-  content: '';
-  text-indent: 0;
-  float: left;
-  border-bottom: 3px solid black;
+.hamburger .bar.second.active {
+  opacity: 0;
+}
+.hamburger .bar.first.active {
+  transform: translateY(9px) rotate(45deg);
+}
+.hamburger .bar.third.active {
+  transform: translateY(-7px) translateX(-2px) rotate(-45deg);
 }
 
 .search {
@@ -512,10 +520,9 @@ ul li a:hover {
   border-bottom: 1px solid #90b3e4; 
 }
 
-.hamburger { width: 8%; }
-
 .banner .banner-container { bottom: 10%; }
 .submit-btn { width: 50%; }
+
 /* footer start */
 
 .footer-top .wrapper { 
@@ -565,10 +572,8 @@ select { width: 65%; }
 }
 
 @media only screen and (max-width: 320px) {
-  .hamburger {
-    width: 18%;
-    padding-right: 10px;
-}
+  
+  .hamburger { padding-right: 10px; }
 
 .footer-right { white-space: nowrap; }
 }
