js form validation add

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,14 @@ li {
 .caps-first-l::first-letter {text-transform: capitalize;}
 .color-white { color: #fff; }
 a { color: #000; }
-.active { display: block; }
+
+.active { 
+  display: block; 
+  overflow: hidden;
+  animation-name: load;
+  animation-duration: .2s;
+}
+
 .error { 
   border: 1px solid red;
   box-shadow: 1px 1px 8px 1px #e50b0b;
@@ -400,6 +407,12 @@ select {
 
 .social-media li:not(:last-child) { margin-right: 10px; }
 
+.social-media li:hover {
+  cursor: pointer;
+  background: #90b3e4;
+  transition: .2s;
+}
+
  .social-media a {
   text-indent: -9999px;
   float: left;
@@ -495,10 +508,18 @@ ul li a:hover {
   color: #2c1e1e;
   transition: .3s;
 }
+
+.footer-nav li a:hover {
+  color: #959494;
+  transition: .2s;
+} 
  /*=================================
   footer styling ends here
 =================================*/ 
-
+@keyframes load {
+  from { height: 0px;}
+  to { height: 310px; }
+}
 /*media query starts*/
 /*media query for 995px starts here*/
 @media only screen and (max-width: 995px) {
