--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,8 @@ a { color: #000; }
   box-shadow: 1px 1px 8px 1px #e50b0b;
 }
 
+.error-text { color: #e50b0b; }
+
 /* common class style */
 
 /*=================================
