--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,8 @@ a { color: #000; }
   color: #959494; 
 }
 
+.form-field .error-text { margin-top: 10px; }
+
 /* common class style */
 
 /*=================================
